progress, 3 sections left in Build

--- a/developers/proof-lifecycle.mdx
+++ b/developers/proof-lifecycle.mdx
@@ -3,10 +3,7 @@ title: Proof Lifecycle
 description: Following a proof from request to verification
 icon: recycle
 ---
-
-<Info>
-Please refer to the [Boundless Terminology](/developers/terminology) page, and the [zkVM Terminology](https://dev.risczero.com/terminology) page for any unfamiliar terms.
-</Info>
+## Introduction
 
 On this page, the entirety of a proof's lifetime in the Boundless Market is covered; starting from a proof request to bid submission and lock in by a prover, through to proof submission and finally to proof verification.
 
