--- a/developers/smart-contracts/deployments.mdx
+++ b/developers/smart-contracts/deployments.mdx
@@ -1,15 +1,21 @@
-# Deployments
+---
+title: Deployments
+description: Reference for Boundless contract addresses and relevant endpoints.
+icon: list
+---
 
-## $ZKC Token 
+## *$ZKC*  Token 
 
 | Network          | $ZKC Address                                 |
 | ---------------- | --------------------------------------------- |
 | Ethereum Mainnet | `0x000006c2A22ff4A44ff1f5d0F2ed65F781F55555` [(etherscan)](https://etherscan.io/address/0x000006c2A22ff4A44ff1f5d0F2ed65F781F55555)|
 | Base Mainnet     | `0xAA61bB7777bD01B684347961918f1E07fBbCe7CF` [(basescan)](https://basescan.org/address/0xaa61bb7777bd01b684347961918f1e07fbbce7cf)|
 
-## Mainnet
+## Market Contracts
 
-### Base
+### Mainnets
+
+#### Base
 
 | Contract Name            | Contract Address                                                                                                                            |
 | ------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -19,13 +25,13 @@
 | `CollateralToken`        | `0xaa61bb7777bd01b684347961918f1e07fbbce7cf` [(basescan)](https://basescan.org/address/0xaa61bb7777bd01b684347961918f1e07fbbce7cf)|
 
 
-## Testnets
+### Testnets
 
-:::warning[Testnet Addresses]
+<Warning>
 These addresses may change at any time!
-:::
+</Warning>
 
-### Base Sepolia
+#### Base Sepolia
 
 | Contract Name            | Contract Address                                                                                                                            |
 | ------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -34,7 +40,7 @@ These addresses may change at any time!
 | `SetVerifier`            | `0x1Ab08498CfF17b9723ED67143A050c8E8c2e3104` [(basescan)](https://sepolia.basescan.org/address/0x1Ab08498CfF17b9723ED67143A050c8E8c2e3104) |
 | `CollateralToken`        | `0x8d4da4b7938471a919b08f941461b2ed1679d7bb` [(basescan)](https://sepolia.basescan.org/address/0x8d4da4b7938471a919b08f941461b2ed1679d7bb) |
 
-### Ethereum Sepolia
+#### Ethereum Sepolia
 
 | Contract Name            | Contract Address                                                                                                                            |
 | ------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------- |
