--- a/developers/smart-contracts/smart-contract-docs.mdx
+++ b/developers/smart-contracts/smart-contract-docs.mdx
@@ -1,1 +1,7 @@
-PLACEHOLDER
+---
+title: Smart Contract Reference Docs
+description: Automatically Generated Smart Contract Documentation for the Boundless contracts.
+icon: circle-check
+---
+
+TODO
