--- a/developers/tutorials/bonsai.mdx
+++ b/developers/tutorials/bonsai.mdx
@@ -1,9 +1,12 @@
 ---
 title: Migrating from Bonsai
 description: A practical guide for developers transitioning from Bonsai to Boundless
+icon: tree-deciduous
 ---
 
-# Migrating from Bonsai
+<Tip>
+For technical support, please post your questions on the [Boundless Discussions Forum](https://github.com/boundless-xyz/boundless/discussions).
+</Tip>
 
 ## What happened to Bonsai?
 
@@ -66,6 +69,3 @@ The documentation listed below, along with the [Boundless Foundry Template](http
 
 If you are verifying proofs onchain, Boundless proofs verify in exactly the same manner as proofs delivered via Bonsai, and via the same [Verifier Router contract](/developers/smart-contracts/verifier-contracts) you are used to using. There should be no upgrade required, unless you are using an old version of (i.e. 1.X.X) R0VM.
 
-## Need any migration help?
-
-**Join the [Discord](https://discord.gg/aXRuD6spez)** and claim the dev role via [Guild.xyz](https://guild.xyz/boundless-xyz) to chat and ask questions in #dev-support-forum.
