--- a/developers/tutorials/proof-types.mdx
+++ b/developers/tutorials/proof-types.mdx
@@ -1,11 +1,9 @@
 ---
 title: Proof Types
 description: Boundless supports different types of proof delivery, from efficient merkle inclusion proofs to raw Groth16 proofs for cross-chain verification.
+icon: file-pen
 ---
 
-# Proof Types
-
-> Prerequisite Reading: [Request a Proof](/developers/tutorials/request), [Proof Lifecycle](/developers/proof-lifecycle)
 
 ## Default: Merkle Inclusion Proofs
 
