--- a/developers/tutorials/request.mdx
+++ b/developers/tutorials/request.mdx
@@ -1,4 +1,8 @@
-# Request a Proof
+---
+title: Request a Proof
+description: Request a proof from the Boundless market
+icon: hand-point-up
+---
 
 The [Boundless Market SDK](/developers/tooling/sdk) allows developers to build and submit requests to the Boundless protocol; the SDK has sensible defaults, designed to make sending ~95% of requests straightforward.
 
@@ -7,28 +11,28 @@ Therefore, this page is split into two sections:
   - The first section, [Sending A Request](#sending-a-request), shows the quickest and easiest way to request a proof using these *sensible defaults*, without any additional configuration.
   - The second section, [Request Configuration](#request-configuration), covers all available configuration options for the 5% of requests that require fine-tuning.
 
-:::note[Source Code]
+<Note>
 The *Sending a Request* section uses the counter example as a template, its source code can be found at: [boundless/examples/counter](https://github.com/boundless-xyz/boundless/tree/main/examples/counter)
-:::
+</Note>
 
 ## Sending a Request
 
-:::note
+<Note>
 If you want to submit a one-off request via the Boundless CLI, please see [Requesting a Proof via the Boundless CLI](/developers/tooling/cli#requesting-a-proof-via-the-boundless-cli).
-:::
+</Note>
 
 ### 1. Setting environment variables
 
-:::tip[Parsing environment variables]
+<Tip>
 We recommend using [clap](https://crates.io/crates/clap) to parse these environment variables, as seen in [apps/L37-52](https://github.com/boundless-xyz/boundless/blob/cdc2435b6119a009c2cc73dc227a250bee7594fc/examples/counter/apps/src/main.rs#L37-L52).
-:::
+</Tip>
 
 #### Blockchain
 
-:::tip[Alchemy]
+<Tip>
 We recommend using Alchemy for your RPC URL during testing; their free tier is more than enough to test requesting a proof.
 Receiving proofs requires event queries, which public RPCs may not support.
-:::
+</Tip>
 
 Since we are submitting requests onchain, we will need private key for a wallet with sufficient funds on Sepolia, and a working RPC URL:
 
@@ -39,13 +43,13 @@ export PRIVATE_KEY="abcdef..."
 
 #### Storage Provider
 
-:::tip[Pre-uploading your program to a public URL]
+<Tip>
 For this tutorial, we suggest using a Pinata API key which will upload your program at runtime.
 
 If you do not want to use an API key, or if you want to use a provider other than Pinata, you can pre-upload you program to a public URL (this could be hosted via Pinata or any other service).
 
 To see more information about this option, please read [No Storage Provider](/developers/tutorials/request#no-storage-provider).
-:::
+</Tip>
 
 To make a program, and its inputs, accessible to provers, they need to be hosted at a public URL. We recommend using IPFS for storage, particularly via [Pinata](https://pinata.cloud), as their free tier comfortably covers most Boundless use cases.
 
@@ -353,9 +357,9 @@ let (request_id, expires_at) = client.submit_onchain(request).await?; // [!code 
 
 #### Offchain
 
-:::note[Submitting offchain?]
+<Note>
 When using offchain requests, you are required to deposit funds into the Boundless market contract before you can make any proof requests. This can be done with the [Boundless CLI](/developers/tooling/cli#requestor).
-:::
+</Note>
 
 To submit a request offchain, we use:
 
