--- a/developers/tutorials/tracking.mdx
+++ b/developers/tutorials/tracking.mdx
@@ -1,6 +1,16 @@
-# Tracking Proof Requests
+---
+title: Tracking Proof Requests
+description: Check the status of your proof request in the Boundless market
+icon: magnifying-glass
+---
 
-This guide covers both [tracking a proof request programmatically](#programmatically) and using the [Boundless Explorer](#boundless-explorer).
+## Using the CLI
+
+The [Boundless CLI](/developers/tooling/cli) provides the following command:
+
+```shell Terminal
+boundless requestor status
+```
 
 ## Programmatically
 
