--- a/developers/tutorials/troubleshooting.mdx
+++ b/developers/tutorials/troubleshooting.mdx
@@ -1,8 +1,12 @@
-# Troubleshooting a Request
+---
+title: Troubleshooting a Request
+description: Debugging a request on Boundless
+icon: bug-slash
+---
 
-:::tip[Need Help?]
-Join our [Discord community](https://discord.gg/aXRuD6spez) and claim the developer role via [Guild.xyz](https://guild.xyz/boundless-xyz) to get access to the **#dev-support-forum** channel where you can ask questions and get help from the Boundless team and community.
-:::
+<Tip>
+For technical support, please post your questions on the [Boundless Discussions Forum](https://github.com/boundless-xyz/boundless/discussions).
+</Tip>
 
 If you submitted a request, and it is stuck in an "Unknown" / "Submitted" state, there may be something that is preventing the provers from picking up your request.
 
