--- a/developers/tutorials/sensitive-inputs.mdx
+++ b/developers/tutorials/sensitive-inputs.mdx
@@ -1,9 +1,10 @@
 ---
 title: Sensitive Inputs via AWS S3
 description: This tutorial shows how to upload program inputs to Amazon S3, and use IAM roles and optionally SSE-KMS to gate access to specific trusted Boundless provers. It also shows how a prover can access these sensitive inputs.
+icon: user-secret
 ---
 
-# Sensitive Inputs via AWS S3
+## Overview
 
 When [requesting a proof](/developers/tutorials/build), requestors need to upload both their program binary (ELF) and the associated inputs to a compatible storage provider.
 This allows the prover to download the required program and inputs to begin proving.
@@ -38,9 +39,9 @@ The general workflow for the requestor is:
 
 To continue, an [AWS account](https://signin.aws.amazon.com/signup?request_type=register) is required. After that, you'll need the [AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html) to set up your S3 bucket, create roles and set the required policies.
 
-:::note[If you prefer using the AWS console]
+<Note>
 You can follow the official instructions at [Step 1: Create your first S3 bucket](https://docs.aws.amazon.com/AmazonS3/latest/userguide/GetStartedWithS3.html#creating-bucket).
-:::
+</Note>
 
 To store the inputs, we will need to first create an S3 bucket. This can be done with the CLI with:
 
@@ -66,11 +67,11 @@ For a list of AWS regions, please see [Available AWS regions](https://docs.aws.a
 
 ### 2. Create the required prover role
 
-:::note[What is an IAM role?]
+<Note>
 An IAM role is an AWS identity with its own permission policy that any trusted user, service, or account can temporarily assume to get short-lived credentials instead of keeping permanent keys.
 
 To learn more, please see [IAM Roles](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles.html).
-:::
+</Note>
 
 With the bucket created, we need to create an IAM role for prover; this will allow the prover access to the inputs stored in the S3 bucket. To create the role, we will need two things:
 
@@ -209,7 +210,11 @@ After this setup, you may request a proof programmatically as [Request a Proof](
 
 If you're interested in doing a one-off test, take a look at the [requestor module](/developers/tooling/cli#requestor) in the Boundless CLI.
 
-Relevant Links: [StorageProvider](https://docs.rs/boundless-market/latest/boundless_market/storage/trait.StorageProvider.html), [storage_provider_from_env](https://docs.rs/boundless-market/latest/boundless_market/storage/fn.storage_provider_from_env.html).
+
+<Check>
+Relevant Links:
+[StorageProvider](https://docs.rs/boundless-market/latest/boundless_market/storage/trait.StorageProvider.html), [storage_provider_from_env](https://docs.rs/boundless-market/latest/boundless_market/storage/fn.storage_provider_from_env.html).
+</Check>
 
 ## Prover
 
